--- a/expenses/templates/expenses/login.html
+++ b/expenses/templates/expenses/login.html
@@ -1,16 +1,15 @@
 {% load static %}
 <!DOCTYPE html>
 <html>
-<head>
+  <head>
     <title>Login</title>
-    <link rel="stylesheet" href="{% static 'expenses/style.css' %}">
-</head>
-<body>
+    <link rel="stylesheet" href="{% static 'expenses/style.css' %}" />
+  </head>
+  <body>
     <h2>Login to SmartSpend</h2>
     <form method="post">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit" class="nav-btn">Login</button>
+      {% csrf_token %} {{ form.as_p }}
+      <button type="submit" class="nav-btn">Login</button>
     </form>
-</body>
+  </body>
 </html>
