--- a/expenses/templates/expenses/savings.html
+++ b/expenses/templates/expenses/savings.html
@@ -1,25 +1,20 @@
 {% load static %}
 <!DOCTYPE html>
 <html>
-<head>
+  <head>
     <title>Savings</title>
-    <link rel="stylesheet" href="{% static 'expenses/style.css' %}">
-</head>
-<body>
+    <link rel="stylesheet" href="{% static 'expenses/style.css' %}" />
+  </head>
+  <body>
     <h1>Your Monthly Savings</h1>
-    <br>
+    <br />
     <p><strong>Total Income:</strong> ₹{{ income }}</p>
-<p><strong>Total Expenses:</strong> ₹{{ total_expenses }}</p>
-<br>
-{% if over_budget %}
-  <p >
-    Over Budget by ₹{{ over_budget_amount }}
-  </p>
-{% else %}
-  <p  >
-    Savings Left: ₹{{ savings }}
-  </p>
-{% endif %}
-
-</body>
+    <p><strong>Total Expenses:</strong> ₹{{ total_expenses }}</p>
+    <br />
+    {% if over_budget %}
+    <p>Over Budget by ₹{{ over_budget_amount }}</p>
+    {% else %}
+    <p>Savings Left: ₹{{ savings }}</p>
+    {% endif %}
+  </body>
 </html>
